# MIT_Hackaton

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/api/: __init__.py  app.py  deps.py  index.py  schemas.py
backend/api/routes/: analyze.py  countries.py  policymaker.py  signals.py  skills.py
backend/config/: __init__.py  country_loader.py  sectors.yaml  settings.py
backend/config/countries/: BGD.yaml  GHA.yaml  _template.yaml
backend/core/: __init__.py  cache.py  credential.py  logging.py
backend/crawlers/: __init__.py  base.py  esco.py  frey_osborne.py  ilostat.py  orchestrator.py  tavily.py  wittgenstein.py  worldbank.py
backend/data/: sources.json
backend/data/processed/: bgd.json  gha.json  skills_taxonomy.json
backend/data/reference/: frey_osborne_2017.csv  isco08_titles.csv  soc_to_isco08.csv
backend/matching/: __init__.py  econometric.py  opportunities.py  risk_calculator.py  skill_matcher.py
backend/scripts/: __init__.py  build_taxonomy.py  crawl.py  seed_demo.py
backend/tests/: conftest.py  test_api.py  test_country_loader.py  test_matcher.py  test_risk.py  test_tavily.py
frontend/: .env.example  .gitignore  .vercelignore  package-lock.json  package.json  vite.config.ts
frontend/public/: offline.html  service-worker.js
frontend/scripts/: postbuild-vercel.mjs  postbuild.mjs
frontend/src/: api.ts  styles.css  vite-env.d.ts
frontend/src/components/: AIReadinessCard.tsx  EconometricSignalsCard.tsx  PortableCredentialCard.tsx  RiskGauge.tsx  SkillsProfileCard.tsx
(+3 files in other folders)
